--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.ico" />
+  <meta name="robots" content="index,follow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
-  <meta name="description" content="This is an example of a meta description. This will often show up in search results.">
+  <link rel="apple-touch-icon" sizes="180x180">
+  <meta property="og:title" content="Faye Diane - Web Portfolio">
+  <meta property="og:description" content="Explore the portfolio of Faye, a web developer and designer. Discover her skills, works, background, and socials." />
+  <meta property="og:url" content="https://fayediane.vercel.app" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Faye Diane - Web Portfolio</title>
+  <meta name="title" content="Faye Diane - Web Portfolio">
+  <meta name="description" content="Faye is a web developer and designer with a passion for crafting visually stunning and functional web experiences.">
+  <meta name="keywords" content="web development, web, design, graphic design, web design, aspiring, philippines, developer, web developer, pinoy developer, ui, ux, ui designer, ux designer, portfolio, web portfolio, designer portfolio, react portfolio">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600&display=swap" rel="stylesheet">
 </head>
