--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:description" content="Explore the portfolio of Faye, a web developer and designer. Discover her skills, works, background, and socials." />
   <meta property="og:url" content="https://fayediane.vercel.app" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="" />
+  <!-- <meta property="og:image" content=""/> -->
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Faye Diane - Web Portfolio</title>
   <meta name="title" content="Faye Diane - Web Portfolio">
