update meta keywords

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <title>Faye Diane - Web Portfolio</title>
   <meta name="title" content="Faye Diane - Web Portfolio">
   <meta name="description" content="Faye is a web developer and designer with a passion for crafting visually stunning and functional web experiences.">
-  <meta name="keywords" content="web development, web, design, graphic design, web design, aspiring, philippines, developer, web developer, pinoy developer, ui, ux, ui designer, ux designer, portfolio, web portfolio, designer portfolio, react portfolio">
+  <meta name="keywords" content="faye talay, faye diane, faye diane talay, faye portfolio, front-end developer portfolio, web development, web, design, graphic design, web design, aspiring, philippines, developer, web developer, pinoy developer, ui, ux, ui designer, ux designer, portfolio, web portfolio, designer portfolio, react portfolio">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
