--- a/index.html
+++ b/index.html
@@ -11,16 +11,22 @@
   <meta property="og:description" content="Explore the portfolio of Faye, a web developer and designer. Discover her skills, works, background, and socials." />
   <meta property="og:url" content="https://fayediane.vercel.app" />
   <meta property="og:type" content="website" />
-  <!-- <meta property="og:image" content=""/> -->
+  <meta property="og:image" content="https://github.com/nescafaye/my-portfolio/blob/main/src/assets/images/OGP-Image.png"/>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Faye Diane - Web Portfolio</title>
   <meta name="title" content="Faye Diane - Web Portfolio">
   <meta name="description" content="Faye is a web developer and designer with a passion for crafting visually stunning and functional web experiences.">
   <meta name="keywords" content="faye talay, faye diane, faye diane talay, faye portfolio, front-end developer portfolio, web development, web, design, graphic design, web design, aspiring, philippines, developer, web developer, pinoy developer, ui, ux, ui designer, ux designer, portfolio, web portfolio, designer portfolio, react portfolio">
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-  <link  rel="preload" href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600&display=swap" rel="stylesheet">
+  
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" as="style">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600&display=swap" as="style">
+  <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
